--- a/src/App.css
+++ b/src/App.css
@@ -9,15 +9,15 @@
 .App-left{
   float: left;
   position: relative;
-  min-height: 100vh;
 
   flex-direction: column;
   align-items: center;
+  height: 100vh;
   
   font-size: calc(10px + 2vmin);
   color: white;
   width: 60%;
-  background-color: red;
+  background-color:  grey;
 }
 
 .App-right{
@@ -25,8 +25,7 @@
   position: relative;
   min-height: 100vh;
 
-  text-align: left;
-  
+  text-align: left; 
   
   font-size: calc(10px + 2vmin);
   width:40%;
