--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,10 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
 .App-left{
   float: left;
   position: relative;
 
   flex-direction: column;
-  align-items: center;
-  height: 100vh;
+  align-items: left;
+  height: 100%;
   
   font-size: calc(10px + 2vmin);
   color: white;
@@ -23,13 +15,13 @@
 .App-right{
   float: left;
   position: relative;
-  min-height: 100vh;
+  height: 100%;
 
   text-align: left; 
   
   font-size: calc(10px + 2vmin);
   width:40%;
-  background-color: white;
+  background-color: #272822;
 }
 
 .App-link {
