--- a/src/MyApp.css
+++ b/src/MyApp.css
@@ -1,10 +1,14 @@
+.App{
+  width: 100%;
+  height: auto;
+}
+
 .App-left{
   float: left;
   position: relative;
   font-family: monospace;
   flex-direction: column;
   align-items: left;
-  height: 100%;
   
   font-size: calc(10px + 2vmin);
   color: white;
@@ -16,7 +20,6 @@
   float: left;
   position: relative;
   height: 100%;
-  min-height: 100vh;
   text-align: left; 
   
   font-size: 1.5em;
